<resources>
    <string name="app_name">tech-building</string>

    <!-- Login Screen -->
    <string name="login_screen_text_input_user_hint">Usuário</string>
    <string name="login_screen_text_input_password_hint">Senha</string>
    <string name="login_screen_sing_in_button">Entrar</string>
    <string name="login_screen_sing_in_error">Usuário ou Senha incorreta!!</string>

    <!-- Home Screen -->
    <string name="home_screen_stock_category">Estoque</string>

    <!-- Card Carousel Screen -->
    <string name="card_carousel_new_request">Nova Requisição</string>
    <string name="card_carousel_release_request">Liberar Requisição</string>

    <!-- New Request -->
    <string name="new_request_screen_toolbar_tile">Nova Requisição</string>
    <string name="new_request_screen_collaborator_label">Colaborador</string>
    <string name="new_request_screen_material_label">Materiais</string>
    <string name="new_request_screen_item_already_exists">O item já existe na lista!!</string>

    <!-- Add Item -->
    <string name="add_item_screen_toolbar_tile">Adicionar Material</string>
    <string name="add_item_screen_material_label">Material</string>
    <string name="add_item_screen_material_code_label">Código do Material:</string>
    <string name="add_item_screen_request_quantity_hint">Quantidade solicitada</string>
    <string name="add_item_screen_unit_label">Unidade de medida</string>
    <string name="add_item_screen_unit_hint">Informe a unidade</string>
    <string name="add_item_screen_save_button">Salvar</string>
    <string name="add_item_message_error_unit_selector">Você precisa selecionar uma unidade de medida!!</string>
    <string name="add_item_message_error_qtd_requested">Você precisa informar quantidade solicitada!!</string>
    <string name="add_item_message_error_material_selector">Você precisa selecionar um material!!</string>
    <string name="add_item_screen_edit_button">Editar</string>
    <string name="add_item_screen_toolbar_tile_edit_item">Editar Material</string>

    <!-- Item Added -->
    <string name="item_added_qtd_label">QTD:</string>
    <string name="item_added_unit_label">UND:</string>
    <string name="item_added_qtd_attended_label">QTDA:</string>

    <!-- QrCode Scan Collaborate -->
    <string name="qrcode_screen_scan_error_message">Não identificamos os dados do colaborador, gostaria de tentar novamente?</string>

    <!-- Request List -->
    <string name="request_list_screen_toolbar_tile">Lista de Requisições</string>
    <string name="request_list_screen_checkbox_pending">Pendente</string>
    <string name="request_list_screen_checkbox_attended">Atendida</string>
    <string name="request_list_screen_checkbox_all">Todos</string>

    <!-- Release Request -->
    <string name="release_request_screen_toolbar_tile">Liberar Requisição</string>

    <!-- Release Material -->
    <string name="release_material_screen_qtd_requested_label">Quantidade solicitada:</string>
    <string name="release_material_screen_quantity_attended_label">Quantidade Atendida:</string>
    <string name="release_material_screen_quantity_attended_hint">Quantidade Atendida</string>
    <string name="release_material_screen_toolbar_tile">Material</string>

    <!-- NetWork Page -->
    <string name="network_page_title">Você está sem internet?</string>
    <string name="network_page_subtitle">Identificamos que você está com problemas na sua rede, por favor verifique sua conexão.</string>
    <string name="network_page_try_again_button">Tentar Novamente</string>
    <string name="network_page_closed_button">Fechar</string>
</resources>