<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/illustration"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/network"
        app:lottie_speed="2.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_20"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/network_page_title"
        android:textColor="@color/app_color"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/illustration" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/network_page_subtitle"
        android:textColor="@color/app_color"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <Button
        android:id="@+id/tryAgainButton"
        style="@style/ButtonStyle"
        android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
        android:background="@drawable/shape_button_border_radius"
        android:text="@string/network_page_try_again_button"
        android:layout_marginBottom="@dimen/margin_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/closeButton"/>

    <TextView
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_24"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/network_page_closed_button"
        android:textColor="@color/app_color"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>