<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.releaserequest.releasematerial.view.ReleaseRequestedMaterialActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/release_material_screen_toolbar_tile" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/materialLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
                android:layout_marginTop="@dimen/margin_24"
                android:text="@string/add_item_screen_material_label"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/materialValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
                android:layout_marginTop="@dimen/margin_24"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintLeft_toRightOf="@id/materialLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Tijolo" />


            <TextView
                android:id="@+id/materialCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
                android:layout_marginTop="20dp"
                android:text="@string/add_item_screen_material_code_label"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/materialLabel" />

            <TextView
                android:id="@+id/materialCodeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_7"
                android:layout_marginTop="22dp"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintBottom_toBottomOf="@id/materialCodeLabel"
                app:layout_constraintLeft_toRightOf="@id/materialCodeLabel"
                app:layout_constraintTop_toBottomOf="@id/materialLabel" />

            <TextView
                android:id="@+id/qtdRequestedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
                android:layout_marginTop="20dp"
                android:text="@string/release_material_screen_qtd_requested_label"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/materialCodeLabel" />

            <TextView
                android:id="@+id/qtdRequestedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_7"
                android:layout_marginTop="22dp"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintBottom_toBottomOf="@id/qtdRequestedLabel"
                app:layout_constraintLeft_toRightOf="@id/qtdRequestedLabel"
                app:layout_constraintTop_toBottomOf="@id/materialCodeLabel"
                tools:text="0" />

            <TextView
                android:id="@+id/qtdAttendedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
                android:layout_marginTop="20dp"
                android:text="@string/release_material_screen_quantity_attended_label"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/qtdAttendedLayout"
                app:layout_constraintTop_toBottomOf="@id/qtdRequestedValue" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/qtdAttendedLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
                android:layout_marginTop="@dimen/margin_7"
                android:background="@color/white"
                android:hint="@string/release_material_screen_quantity_attended_hint"
                android:textColorHint="@color/text_color_text_InputLayout"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/qtdAttendedLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/qtdAttendedValue"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/unitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/add_item_screen_unit_label"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/qtdAttendedLayout" />

            <TextView
                android:id="@+id/unitValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_7"
                android:layout_marginTop="22dp"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                app:layout_constraintBottom_toBottomOf="@id/unitLabel"
                app:layout_constraintLeft_toRightOf="@id/unitLabel"
                app:layout_constraintTop_toBottomOf="@id/qtdAttendedLayout"
                tools:text="KG" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/saveMaterialButton"
            style="@style/ButtonStyle"
            android:layout_marginHorizontal="@dimen/margin_horizontal_views_screen"
            android:layout_marginBottom="@dimen/margin_24"
            android:background="@drawable/shape_button_border_radius"
            android:text="@string/add_item_screen_save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>